# 3DCopyGUI

./: .gitignore  3DCopyGUI.pro  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtBinDebug/: 3DCopyGUI  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
include/: Mesh.h
src/: Mesh.cpp
